--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^16.4.5",
+    "dotnet": "^1.1.4",
     "firebase": "^10.12.1",
     "nodemon": "^3.1.0",
     "react": "^18.3.1",
